// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormLegend is rendered 1`] = `
<legend
  aria-label="aria-label"
  class="ouiFormLegend testClass1 testClass2"
  data-test-subj="test subject string"
>
  Legend
</legend>
`;

exports[`OuiFormLegend props compressed is rendered 1`] = `
<legend
  class="ouiFormLegend ouiFormLegend--compressed"
>
  Legend
</legend>
`;

exports[`OuiFormLegend props hidden is rendered 1`] = `
<legend
  class="ouiFormLegend ouiFormLegend-isHidden"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Legend
  </span>
</legend>
`;
